--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver 
+            android:name=".HelloReceiver">
+            <intent-filter>
+                <action android:name="com.xiaoxiao.virgo.helloReceiver"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
